Adicionei dependencies para trabalhar com os qrcodes e gerar páginas html e também adicionei alguns plugins para resolver alguns erros de jdk